--- a/backend/package.json
+++ b/backend/package.json
@@ -59,7 +59,8 @@
     "lodash": "^4.17.21",
     "crypto": "^1.0.1",
     "node-cron": "^3.0.3",
-    "@sentry/node": "^7.81.1"
+    "@sentry/node": "^7.81.1",
+    "firebase-admin": "^11.11.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
