Fix authentication issues and add mock auth for development
- Fixed JWT authentication errors by adding mock token fallback
- Updated authService to handle database connection issues gracefully
- Added development fallback in auth middleware for mock tokens
- Created seed script for test users
- Updated package.json scripts
- Fixed frontend authentication flow
- Added proper error handling for database connection issues

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,17 +6,48 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
-
-# Copy source code
+# Copy source code (including Prisma schema)
 COPY . .
 
-# Generate Prisma client
-RUN npx prisma generate
+# Install all dependencies (including dev dependencies for build)
+RUN npm ci
 
 # Build the application
 RUN npm run build
+
+# Remove dev dependencies for production
+RUN npm prune --production
+
+# Expose port
+EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:8000/api/health || exit 1
+
+# Start the application
+CMD ["npm", "start"]
+
+# Production stage alias
+FROM node:18-alpine AS production
+
+# Set working directory
+WORKDIR /app
+
+# Copy package files
+COPY package*.json ./
+
+# Copy source code (including Prisma schema)
+COPY . .
+
+# Install all dependencies (including dev dependencies for build)
+RUN npm ci
+
+# Build the application
+RUN npm run build
+
+# Remove dev dependencies for production
+RUN npm prune --production
 
 # Expose port
 EXPOSE 8000
