--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "db:seed": "ts-node src/seed.ts",
+    "db:seed": "ts-node prisma/seed.ts",
     "db:reset": "prisma migrate reset --force",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -60,7 +60,8 @@
     "crypto": "^1.0.1",
     "node-cron": "^3.0.3",
     "@sentry/node": "^7.81.1",
-    "firebase-admin": "^11.11.1"
+    "firebase-admin": "^11.11.1",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
