--- a/.env.production
+++ b/.env.production
@@ -70,7 +70,7 @@ GRAFANA_USER=admin
 GRAFANA_PASSWORD=admin123
 
 # Google Services (optional for basic deployment)
-GOOGLE_MAPS_API_KEY=AIzaSyBnGYfLzDbpMa93Hyo2pPgQXY7wSJ1DPPQ
+GOOGLE_MAPS_API_KEY=secret key
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
